--- a/Buổi 2/Bai tập/b10.html
+++ b/Buổi 2/Bai tập/b10.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1" style="border-collapse: collapse;"> 
+    <table border="1" cellpadding ="5" style="border-collapse: collapse;"> 
         <caption>
-
             <h2>Quản Lý Sinh Viên</h2>
         </caption>
         <thead>
