--- a/Buổi 4/baitap.html/bai10.html
+++ b/Buổi 4/baitap.html/bai10.html
@@ -6,6 +6,50 @@
     <title>Document</title>
 </head>
 <body>
-    bt10
+    <h1>Jonh Doe </h1>
+    <p>Web Developer | Tech Enthusiast | Problem Solver</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLA994hpL3PMmq0scCuWOu0LGsjef49dyXVg&s" alt=" ">
+    <ul>
+        <li><a href="bai10Aboul.html">About</a></li>
+        <li><a href="bai10Prolect.html">Projects</a></li>
+        <li><a href="bai10Contact.html">Contact</a></li>
+    </ul>
+    <h2>About Me</h2>
+    <p>Hello! I am passionnate web ....</p>
+    <p>"code ..."-Cory House</p>
+    <h2>Projects</h2>
+    <table>
+        <tr>
+            <th>Project name</th>
+            <th>Description</th>
+            <th>Link</th>
+        </tr>
+        <tr>
+            <td>Portfolion Website</td>
+            <td>A simple personal portfolio website.</td>
+            <td><a href="" target="_blank">View</a></td>
+        </tr>
+        <tr>
+            <td>To-Do List App</td>
+            <td>A web-based to-do list application.</td>
+            <td><a href="" target="_blank">View</a></td>
+        </tr>
+    </table>
+    <h2>Contact Me</h2>
+    <form action="">
+        <span>Name:</span> <input type="text">
+        <br>
+        <span>Email:</span> <input type="email">
+        <br>
+        <span>Message:</span> <textarea name="" id=""></textarea>
+        <button>Send</button>
+    </form>
+    <h2>Featured Video</h2>
+    <iframe src="../../video/videoplayback.mp4" frameborder="0" height="300" width="300"></iframe>
+    <br>
+    <span> &copy; 2024 Jonh Doe</span>
+    <br>
+    <p><a href="">LinkedIn</a> <a href="">GitHub</a></p>
+    
 </body>
 </html>
