--- a/Buổi 5/baitap/bai4.html
+++ b/Buổi 5/baitap/bai4.html
@@ -10,12 +10,12 @@
     <main>
         <table>
             <tr>
-                <td class="img">
-                    <img src="../../ảnh/31430676986297982-denamhon.jpg"
+                <td>
+                    <img  src="../../ảnh/31430676986297982-denamhon.jpg"
                         alt=" ">
                 </td>
-                <td>
-                    <h2 class="p">Đèn Âm Hồn:Phim tôn vinh văn hoá Việt lại đi đạo nhái loạt bom tấn nước ngoài</h2> 
+                <td class="p">
+                    <h2>Đèn Âm Hồn:Phim tôn vinh văn hoá Việt lại đi đạo nhái loạt bom tấn nước ngoài</h2> 
                     <span class=""><b>Cine </b><span class="p2">- 20 giờ trước</span></span> <br> <br>
                     <span class=" p2">Tác phẩm của đạo diễn Hoàng Nam "học lỏm" nhiều phim kinh dị nổi tiếng nhưng chất lượng kém xa.</span>
                 </td>
