nop bai tap buoi9

--- a/thu/thu.html
+++ b/thu/thu.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,11 +10,20 @@
 </head>
 
 <body>
-    <div>
-        <span class="span">Công chức bị tinh giản tìm việc
-            Đơn vị giải thể, anh Thái ở </span>
-    </div>
+    <div class="hed">
+        <div class="main_1">
+            <div class="item_1">1</div>
+            <div class="item_1">2</div>
+            <div class="item_1">3</div>
+            <div class="item_1">4</div>
+            <div class="item_1">5</div>
+            <div class="item_1">6</div>
+        </div>
 
+        <div class="main_2">
+                <div class="item_7">7</div>
+                <div class="item_8">8</div>
+        </div>
 </body>
 
 </html>
