--- a/thu/thu.html
+++ b/thu/thu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,20 +9,48 @@
 </head>
 
 <body>
-    <div class="hed">
-        <div class="main_1">
-            <div class="item_1">1</div>
-            <div class="item_1">2</div>
-            <div class="item_1">3</div>
-            <div class="item_1">4</div>
-            <div class="item_1">5</div>
-            <div class="item_1">6</div>
+    <div class="creter">
+        <div class="heard">
+            <h2> My BLoG</h2>
+            <div class="home">
+                <a href="Home">Home</a>
+                <a href="Home">About</a>
+                <a href="Home">Post</a>
+                <a href="Home">Contact</a>
+            </div>
+        </div>
+        <div>
+            <div class="boody">
+                <h2>Bài viết nổi bật</h2>
+                <br>
+                <h3>Tiêu đề bài viết chính</h3>
+                <br>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic reprehenderit dolore libe</p>
+                <br>
+
+                <a class="p1">Đọc thêm</a>
+            </div>
+            <div class="boody_2">
+                <h2>Các bài viết khác</h2>
+                <br>
+                <h3>Bài viết 1</h3>
+                <br>
+                <p class="p2">Lorem ipsum dolor sit amet...</p>
+                <br>
+                <h3>Bài viết 2</h3>
+                <br>
+                <p class="p2">Ut nulla eu lorem tincidunt....</p>
+                <br>
+                <h3>Bài viết 3</h3>
+                <br>
+                <p class="p2"> Consectetur adipiscing elit.....</p>
+            </div>
         </div>
 
-        <div class="main_2">
-                <div class="item_7">7</div>
-                <div class="item_8">8</div>
+        <div class="footer">
+            <p> &copy; My Blog.All rights reserved</p>
         </div>
+    </div>
 </body>
 
 </html>
