--- a/buoi10/bai6.html
+++ b/buoi10/bai6.html
@@ -4,31 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>News Slider</title>
     <link rel="stylesheet" href="bai6.css">
 </head>
 
 <body>
-    <div class="container">
-        <div>
-            <img src="../ảnh/football.jpg" alt="">
-        </div>
-
-        <div class="container1">
-            <div>
-                <button>Football</button>
+    <div class="slider-container">
+        <div class="news-card">
+            <img src="football.jpg" alt="Football News" class="news-image">
+            <div class="news-content">
+                <span class="news-tag">Football</span>
+                <p class="news-date">Agence France-Presse - 04 June 2023</p>
+                <h2 class="news-title">LIONEL MESSI LEAVING LIGUE 1 TEAM PARIS SAINT-GERMAIN, CLUB CONFIRMS</h2>
+                <p class="news-desc">The EuroLeague Finals Top Scorer is the individual award for the player that gained
+                    the highest points in the EuroLeague Finals</p>
             </div>
-            <div>
-                <span>Agence France-Presse-04 June 2023</span>
-                <h2>LION MESSI LEAVING LIGUE 1 TEAM <br> PARIS SAINT-GERMAIN,CLUB CONFIRMS</h2>
-                <span>The EuroLeague Finals Top is the individual award for the player <br> that gained the highest
-                    points
-                    in the EuroLeague Final</span>
-            </div>
-
         </div>
-
-
+        <div class="pagination">
+            <button class="prev-btn">&#8592;</button>
+            <span class="page-number active">1</span>
+            <span class="page-number">2</span>
+            <span class="page-number">3</span>
+            <span class="page-number">4</span>
+            <button class="next-btn">&#8594;</button>
+        </div>
     </div>
 </body>
 
