--- a/thu/thu.html
+++ b/thu/thu.html
@@ -1,168 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./thu.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+<html>
 
 <body>
-    <div class="top_header">
-        <div class="frame_746">
-            <div class="frame_555">
-                <span class="text_1">Summer Sale For All Swim Suits And Free Express Delivery - OFF 50%!</span>
-                <span class="text_2">ShopNow</span>
-            </div>
-            <div class="frame_549">
-                <span class="text_3">English <i class="fa-solid fa-caret-down"></i></span>
-            </div>
-        </div>
-    </div>
-    <div class="header">
-        <div class="frame_556">
-            <div class="logo">
-                <span class="text_4">
-                    Exclusive
-                </span>
-            </div>
-            <div class="frame_554">
-                <a href="" class="home">Home</a>
-                <a href="" class="home">Contact</a>
-                <a href="" class="home">About</a>
-                <a href="" class="home">Sign Up</a>
-            </div>
-        </div>
-        <div class="frame_552">
-            <div class="search_component_set">
-                <div class="frame_550">
-                    <span class="opa">What are you looking for?</span>
-                    <span><i class="fa-solid fa-magnifying-glass"></i></span>
-                </div>
-            </div>
-            <div class="frame_551">
-                <div class="frame_551_icon"><i class="fa-regular fa-heart"></i></div>
-                <div class="frame_551_icon"><i class="fa-solid fa-cart-shopping"></i></div>
-                <div class="frame_551_icon"><i class="fa-solid fa-user-tie"></i></div>
-            </div>
-        </div>
-    </div>
-    <div class="line_3"></div>
-    <div class="main">
-        <div class="road_map">
-            <span class="account">Home</span>
-            <span class="line_13"> / </span>
-            <span>My Account</span>
-        </div>
-        <div class="welcome_text">
-            <span>Welcome!</span>
-            <span class="md_color">Md Rimel</span>
-        </div>
-        <span class="manage_my_account">Manage My Account</span>
-        <div class="frame_839">
-            <p class="text_5">My Profile</p>
-            <p class="text_6">Address Book</p>
-            <p class="text_7">My Payment Options</p>
-        </div>
-        <span class="my_orders">My Orders</span>
-        <div class="frame_840">
-            <p class="text_8">My Returns</p>
-            <p class="text_9">My Cancellations</p>
-        </div>
-        <span class="my_wishlist">My WishList</span>
-        <div class="frame_838">
-            <p class="edit_your_profile">Edit Your Profile</p>
-            <div class="frame_848">
-                <div class="frame_841">
-                    <p>First Name</p>
-                    <input type="text" name="" id="" placeholder="Md" class="input_1">
-                </div>
-                <div class="frame_841">
-                    <p>Last Name</p>
-                    <input type="text" name="" id="" placeholder="Rimel" class="input_1">
-                </div>
-            </div>
-            <div class="frame_849">
-                <div class="frame_841">
-                    <p>Email</p>
-                    <input type="email" name="" id="" placeholder="rimel1111@gmail.com" class="input_1">
-                </div>
-                <div class="frame_841">
-                    <p>Address</p>
-                    <input type="text" name="" id="" placeholder="Kingston, 5236, United State" class="input_1">
-                </div>
-            </div>
-            <div class="frame_846">
-                <p>Password Changes</p>
-                <input type="text" name="" id="" placeholder="Current Password" class="input_2">
-                <input type="text" name="" id="" placeholder="New Password" class="input_2">
-                <input type="text" name="" id="" placeholder="Confirm New Password" class="input_2">
-            </div>
-            <div class="frame_847">
-                <span>Cancel</span>
-                <button class="frame_847_button">Save Changes</button>
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <div class="frame_743">
-            <div class="frame_717">
-                <p class="frame_717_Exclusive">Exclusive</p>
-                <p class="frame_717_Subscribe">Subscribe</p>
-                <p class="frame_717_Gift">Get 10% off your first order</p>
-                <div class="send_mail">
-                    <input type="text" name="" id="" placeholder="Enter your email" class="frame_717_Gift_input">
-                    <img src="../images/send_email.png" alt="" class="send_mail_img">
-                </div>
-            </div>
-            <div class="frame_713">
-                <p class="frame_713_name">Support</p>
-                <p class="frame_713_text">111 Bijoy sarani, Dhaka, DH 1515, Bangladesh.</p>
-                <p class="frame_713_text">exclusive@gmail.com</p>
-                <p class="frame_713_text">+88015-88888-9999</p>
-            </div>
-            <div class="frame_711">
-                <p class="frame_711_name">Account</p>
-                <p class="frame_711_text">My Account</p>
-                <p class="frame_711_text">Login / Register</p>
-                <p class="frame_711_text">Cart</p>
-                <p class="frame_711_text">Wishlist</p>
-                <p class="frame_711_text">Shop</p>
-            </div>
-            <div class="frame_709">
-                <p class="frame_709_name">Quick Link</p>
-                <p class="frame_709_text">Privacy Policy</p>
-                <p class="frame_709_text">Terms Of Use</p>
-                <p class="frame_709_text">FAQ</p>
-                <p class="frame_709_text">Contact</p>
-            </div>
-            <div class="frame_742">
-                <p class="text">Download App</p>
-                <p class="save">Save $3 with App New User Only</p>
-                <div class="frame_719">
-                    <img src="../images/Qr Code.png" alt="" class="qr">
-                    <div class="frame_718">
-                        <img src="../images/GooglePlay.png" alt="" class="item">
-                        <img src="../images/AppStore.png" alt="" class="item">
-                    </div>
-                </div>
-                <div class="frame_741">
-                    <img src="../images/Icon-Facebook.png" alt="" class="item">
-                    <img src="../images/Icon-Twitter.png" alt="" class="item">
-                    <img src="../images/icon-instagram.png" alt="" class="item">
-                    <img src="../images/Icon-Linkedin.png" alt="" class="item">
-                </div>
-            </div>
-        </div>
-        <div class="frame_643">
-            <hr>
-            <p class="frame_67">&copy; Copyright Rimel 2022. All right reserved</p>
-        </div>
-    </div>
+    <h3> The nested for loop in JavaScript</h3>
+    <p> Enter number of rows and columns to create matrix</p>
+    <form>
+        <label>Rows : </label>
+        <input type="text" id="rows"><br><br>
+        <label> Columns : </label>
+        <input type="text" id="cols"><br><br>
+        <input type="button" onclick="fun()" value="Create Matrix">
+    </form>
+    <br><br>
+    <div id="result"></div>
+    <script>
+        function fun() {
+            var text = "";
+            var rows = document.getElementById("rows").value;
+            var cols = document.getElementById("cols").value;
+            for (let i = 0; i < rows; i++) {
+                for (let j = 0; j < cols; j++) {
+                    text += "#"
+                }
+                text += "<br>";
+            }
+            document.getElementById("result").innerHTML = text;
+        }
+    </script>
 </body>
 
 </html>
