--- a/bai22/baitap/bai2.html
+++ b/bai22/baitap/bai2.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bai 2</title>
 </head>
 <body>
-    
-
-    <script src="bai11.js"></script>
+    <script src="bai2.js"></script>
 </body>
 </html>
