--- a/diary/html/add_article.html
+++ b/diary/html/add_article.html
@@ -40,5 +40,6 @@
         <button id="button_home">Home</button>
       </a>
     </div>
+    <script src="../js/add_article.js"></script>
   </body>
 </html>
