--- a/diary/html/home.html
+++ b/diary/html/home.html
@@ -27,56 +27,26 @@
       </label>
 
       <!-- Thêm khu vực hiển thị trạng thái đăng nhập -->
-      <div id="user_status"></div>
+      <div id="user_status_container"></div>
+      <div id="user_dropdown_menu">
+        <div id="profile_section">
+          <img src="../assets/images/avata_admin_test.png" alt="User Avatar" />
+          <div id="profile_name_email">
+            <span id="profile_name">Rikkei</span>
+            <span id="profile_email">rikkei@gmail.com</span>
+          </div>
+        </div>
+        <span class="profile_option">View profile</span>
+        <span class="profile_option">Update profile picture</span>
+        <span class="profile_option">Change password</span>
+        <span id="profile_logout">Logout</span>
+      </div>
     </div>
+
     <div id="container_recent_blog_posts">
       <div id="recent_blog_posts">
         <h3 id="title_recent_blog_posts">Recent blog posts</h3>
-        <div class="article">
-          <div id="article01">
-            <img src="../assets/images/thu_.jfif" alt="" />
-            <div>
-              <span class="date">Date: 2025-02-25</span>
-              <span class="title">A Productive Day at Work</span>
-              <p class="content">
-                Thanh niên chưa đầy 30 tuổi đã trở thành tỉ phú USD đầu tiên của
-                Việt Nam. Hành trình khởi nghiệp của anh bắt đầu từ những ngày
-                đầu tiên với một chiếc xe máy cũ kỹ, đi giao hàng cho các cửa
-                hàng thực phẩm. Sau đó, anh đã quyết định thành lập công ty
-                riêng và...
-              </p>
-              <span class="category">Daily Journal</span>
-            </div>
-          </div>
-
-          <div id="article02_03">
-            <div id="article02">
-              <img src="../assets/images/thu_2.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-24</span>
-                <span class="title">My First Job Interview Experience</span>
-                <p class="content">
-                  I had my first job interview today! I was nervous at first,
-                  but as the conversation went on, I felt more confident.
-                </p>
-                <span class="category">Work & Career</span>
-              </div>
-            </div>
-
-            <div id="article03">
-              <img src="../assets/images/thu_3.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-23</span>
-                <span class="title">Overthinking Everything</span>
-                <p class="content">
-                  Lately, I have been overthinking everything, from small
-                  decisions to bigger life choices.I know I should trust myself
-                </p>
-                <span class="category">Personal Thoughts</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="article"></div>
       </div>
 
       <a href="../html/add_article.html" id="container_add_article">
@@ -95,110 +65,9 @@
             </span>
           </div>
 
-          <div id="line_one">
-            <div id="post_01">
-              <img src="../assets/images/thu_.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-25</span>
-                <div>
-                  <span>A Productive Day at Work </span>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                </div>
-                <p>
-                  Today was a really productive day at work. I managed to finish
-                  a report ahead of schedule and received positive feedback from
-                  my manager.
-                </p>
-                <span class="category">Daily Journal</span>
-              </div>
-            </div>
-
-            <div id="post_02">
-              <img src="../assets/images/thu_2.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-25</span>
-                <div>
-                  <span>A Productive Day at Work </span>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                </div>
-                <p>
-                  Today was a really productive day at work. I managed to finish
-                  a report ahead of schedule and received positive feedback from
-                  my manager.
-                </p>
-                <span class="category">Daily Journal</span>
-              </div>
-            </div>
-
-            <div id="post_03">
-              <img src="../assets/images/thu_3.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-25</span>
-                <div>
-                  <span>A Productive Day at Work </span>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                </div>
-                <p>
-                  Today was a really productive day at work. I managed to finish
-                  a report ahead of schedule and received positive feedback from
-                  my manager.
-                </p>
-                <span>Daily Journal</span>
-              </div>
-            </div>
-          </div>
+          <div id="line_one"></div>
           <br />
-
-          <div id="line_two">
-            <div id="post_04">
-              <img src="../assets/images/thu_4.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-25</span>
-                <div>
-                  <span>A Productive Day at Work </span>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                </div>
-                <p>
-                  Today was a really productive day at work. I managed to finish
-                  a report ahead of schedule and received positive feedback from
-                  my manager.
-                </p>
-                <span>Daily Journal</span>
-              </div>
-            </div>
-            <div id="post_05">
-              <img src="../assets/images/thu_5.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-25</span>
-                <div>
-                  <span>A Productive Day at Work </span>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                </div>
-                <p>
-                  Today was a really productive day at work. I managed to finish
-                  a report ahead of schedule and received positive feedback from
-                  my manager.
-                </p>
-                <span>Daily Journal</span>
-              </div>
-            </div>
-            <div id="post_06">
-              <img src="../assets/images/thu_6.jfif" alt="" />
-              <div>
-                <span class="date">Date: 2025-02-25</span>
-                <div>
-                  <span>A Productive Day at Work </span>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                </div>
-                <p>
-                  Today was a really productive day at work. I managed to finish
-                  a report ahead of schedule and received positive feedback from
-                  my manager.
-                </p>
-                <span>Daily Journal</span>
-              </div>
-            </div>
-          </div>
+          <div id="line_two"></div>
         </div>
         <div id="pagination">
           <button id="prev">← Previous</button>
@@ -263,7 +132,8 @@ Development Tutorial
 How to - Blog
 
 Youtube Playlist
-          </pre>
+          </pre
+        >
       </div>
     </div>
     <div id="icon_footer">
