--- a/ontap/baitap/bai1.html
+++ b/ontap/baitap/bai1.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      body {
-        background-color: black;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="container">
-      <div id="img_select"></div>
-      <div>
-        <span>&#8249;</span>
-        <div id="taskbar"></div>
-        <span>&#8250;</span>
-      </div>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Thông báo tin nhắn</title>
+</head>
+<body>
+
+  <div style="position: relative; display: inline-block;">
+    <span style="font-size: 40px;">📩</span>
+    <span style="
+      position: absolute;
+      top: -5px;
+      right: -5px;
+      background: #5f43f3;
+      color: white;
+      border-radius: 50%;
+      padding: 2px 6px;
+      font-size: 12px;
+      font-weight: bold;">2</span>
+  </div>
+</div>
+
+</body>
 </html>
