--- a/diary/html/manage_users.html
+++ b/diary/html/manage_users.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manage Articles</title>
-    <link rel="stylesheet" href="../css/users.css" />
+    <title>Manage Users</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -12,40 +11,93 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="../css/manage_users.css" />
   </head>
   <body>
     <div id="header">
-      <i class="fa-regular fa-envelope"></i>
-      <i class="fa-regular fa-bell"></i>
-      <img src="" alt="">
-    </div>
-    <div class="sidebar">
-      <a href="../html/manage_users.html"><button>Manage Users</button></a>
-      <a href="../html/category_manage.html"><button>Manage Entries</button></a>
-      <a href="../html/manage_articles.html"
-        ><button>Manage Articles</button></a
-      >
-      <button>Log out</button>
-    </div>
-
-    <div class="main-content">
-      <div>
-        <span>Team members</span>
+      <i class="fa-regular fa-bell" id="bell"></i>
+      <div style="position: relative; display: inline-block" id="message">
+        <i style="font-size: 20px" class="fa-regular fa-envelope"></i>
+        <span id="badge">2</span>
       </div>
-      <input class="search-bar" type="text" placeholder="Search Articles" />
+      <img src="../assets/images/avatar_test.jfif" alt="" id="avatar_manage" />
+    </div>
 
-      <div class="article-list"></div>
+    <a href="../html/manage_users.html">
+      <div id="button_manage_users">
+        <div id="child_button_manage_users">
+          <i class="fa-solid fa-users"></i>
+          <span id="span_manage_users">Manage Users</span>
+        </div>
+      </div>
+    </a>
 
-      <div class="pagination">
-        <a href="#">← Previous</a>
+    <a href="../html/category_manage.html">
+      <div id="button_manage_entries">
+        <div id="child_button_manage_entries">
+          <i class="fa-solid fa-book"></i>
+          <span id="span_manage_entries">Manage entries</span>
+        </div>
+      </div>
+    </a>
+
+    <a href="../html/manage_articles.html">
+      <div id="button_manage_articles">
+        <div id="child_button_manage_articles">
+          <i class="fa-solid fa-book-open"></i>
+          <span id="span_manage_users">Manage articles</span>
+        </div>
+      </div>
+    </a>
+
+    <div id="button_logout">
+      <div id="child_button_logout">
+        <i class="fa-solid fa-right-from-bracket"></i>
+        <span id="span_manage_users">Log out</span>
+      </div>
+    </div>
+
+    <div id="team_members">
+      <span id="span_team_member">Team members</span>
+      <span id="number_users">100 users</span>
+    </div>
+
+    <div id="search_manage">
+      <label>
+        <div>
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <span>Search users</span>
+        </div>
+        <input type="text" id="input_search_manage" placeholder="Search..." />
+      </label>
+    </div>
+
+    <table border="1" id="table_users">
+      <tr>
+        <th>Name</th>
+        <th>Status <i class="fa-solid fa-arrow-down"></i></th>
+        <th>Email address</th>
+        <th>active</th>
+        <th>
+          sort by name <i class="fa-solid fa-chevron-up"></i>
+          <i class="fa-solid fa-chevron-down"></i>
+        </th>
+      </tr>
+      <tr></tr>
+    </table>
+
+    <div id="pagination">
+      <a href="#" id="previous">← Previous</a>
+      <div id="page-numbers">
         <a href="#" class="active">1</a>
         <a href="#">2</a>
         <a href="#">3</a>
         <a href="#">...</a>
         <a href="#">9</a>
         <a href="#">10</a>
-        <a href="#">Next →</a>
       </div>
+      <a href="#" id="next">Next →</a>
     </div>
+    <script src="../js/managa_users.js"></script>
   </body>
 </html>
